Name:                deepzoom
Version:             0.1
Description:         A DeepZoom image slicer
License:             BSD3
License-file:        LICENSE
copyright:           (c) Tim Chevalier, 2008
stability:           alpha
Author:              Matthew Panetta
Maintainer:          matthew@panetta.id.au
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 3 && < 5, hsmagick, filepath
  Exposed-modules:   Graphics.Transform.DeepZoom.Slice
  ghc-options:       -Wall
